[gd_scene load_steps=5 format=2]

[ext_resource path="res://Shaders/Fragment/colorswap.shader" type="Shader" id=1]
[ext_resource path="res://Assets/Graphics/Explosion_8x8.png" type="Texture" id=2]
[ext_resource path="res://Object/Explosion/Explosion.gd" type="Script" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/use_screen = false
shader_param/alpha = 1.0
shader_param/color_1_from = Color( 0.25098, 0.25098, 0.25098, 1 )
shader_param/color_1_to = Color( 0.521569, 0.282353, 0.282353, 1 )
shader_param/color_2_from = Color( 0.376471, 0.376471, 0.376471, 1 )
shader_param/color_2_to = Color( 0.796078, 0.545098, 0.219608, 1 )
shader_param/color_3_from = Color( 0.784314, 0.784314, 0.784314, 1 )
shader_param/color_3_to = Color( 0.909804, 0.913725, 0.129412, 1 )
shader_param/color_4_from = Color( 1, 1, 1, 1 )
shader_param/color_4_to = Color( 1, 1, 1, 1 )
shader_param/color_5_from = Color( 1, 1, 1, 1 )
shader_param/color_5_to = Color( 1, 1, 1, 1 )
shader_param/color_6_from = Color( 1, 1, 1, 1 )
shader_param/color_6_to = Color( 1, 1, 1, 1 )
shader_param/color_7_from = Color( 1, 1, 1, 1 )
shader_param/color_7_to = Color( 1, 1, 1, 1 )
shader_param/color_8_from = Color( 1, 1, 1, 1 )
shader_param/color_8_to = Color( 1, 1, 1, 1 )
shader_param/threshold = 0.05

[node name="Explosion" type="Node2D"]
script = ExtResource( 3 )

[node name="Boom1" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )
hframes = 9
frame = 8

[node name="Boom2" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )
hframes = 9
frame = 8

[node name="Boom3" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )
hframes = 9
frame = 8

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="tween_all_completed" from="Tween" to="." method="_on_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
